<resources>
    <string name="app_name">MoMent</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="title_text">MoMent</string>
    <string name="jargon">Simple money management and to do list.</string>
    <string name="your_password_have_changed_successfuly__it_will_automatically_back_to_login_session_string">Your password have changed successfuly. It will automatically back to login session</string>
    <string name="moment_string">Change Success</string>
    <string name="sign_up_string">SIGN UP</string>
    <string name="don_t_have_an_account__string">Dont have an account?</string>
    <string name="forgot_password__string"><u>Forgot Password?</u></string>
    <string name="log_in_string">LOG IN</string>
    <string name="password_string">Password</string>
    <string name="email_string">Email</string>
    <string name="welcome_detail">Already have an account?</string>
    <string name="welcome_text">Hello, Welcome!</string>
    <string name="your_new_password_must_be_different_from_previously_used_passwords__string">Your new password must be different from previously used passwords.</string>
    <string name="create_password_ek3_string">Create New Password</string>
    <string name="save_string">SAVE</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="password_ek1_string">Password</string>
    <string name="forgot_password_string">Forgot Password?</string>
    <string name="don_t_worry__we_ll_try_to_help_you_out__please_enter_email_associated_with_your_account_string">Dont worry! well try to help you out. Please enter email associated with your account</string>
    <string name="submit_string">SUBMIT</string>
    <string name="email_ek1_string">Email</string>
    <string name="moment_ek2_string">Check Your Email</string>
    <string name="we_have_sent_a_password_recovery_instruction_to_your_email__please_check_your_email_string">We have sent a password recovery instruction to your email. Please check your email</string>
    <string name="submit_ek1_string">ROGER</string>
    <string name="kegiatan_senin_string">Kegiatan Senin</string>
    <string name="total_kegiatan___5_string">Total Kegiatan : 5</string>
    <string name="sudah_dikerjakan___2_string">Sudah Dikerjakan : 2</string>
    <string name="belum_dikerjakan___3_string">Belum Dikerjakan : 3</string>
    <string name="detail_string">Detail</string>
    <string name="kegiatan_selasa_string">Kegiatan Selasa</string>
    <string name="total_kegiatan___5_ek1_string">Total Kegiatan : 5</string>
    <string name="sudah_dikerjakan___2_ek1_string">Sudah Dikerjakan : 2</string>
    <string name="belum_dikerjakan___3_ek1_string">Belum Dikerjakan : 3</string>
    <string name="detail_ek1_string">Detail</string>
    <string name="kegiatan_rabu_string">Kegiatan Rabu</string>
    <string name="total_kegiatan___5_ek2_string">Total Kegiatan : 5</string>
    <string name="sudah_dikerjakan___2_ek2_string">Sudah Dikerjakan : 2</string>
    <string name="belum_dikerjakan___3_ek2_string">Belum Dikerjakan : 3</string>
    <string name="detail_ek2_string">Detail</string>
    <string name="pengeluaran_bulanan_string">Pengeluaran Bulanan</string>
    <string name="limit___rp_1_000_000_string">Limit : Rp 1.000.000</string>
    <string name="detail_ek3_string">Detail</string>
    <string name="saldo___rp_500_000_string">Saldo : Rp 500.000</string>
    <string name="pengeluran___rp_800_000_string">Pengeluran : Rp 800.000</string>
    <string name="to_do_activities_string">To Do Activities</string>
    <string name="finance_string">Finance</string>
    <string name="home_ek4_string">Home</string>
    <string name="to_do_ek1_string">To Do</string>
    <string name="finance_ek2_string">Finance</string>
    <string name="profile_ek1_string">Profile</string>
    <string name="cari_judul_to_do_atau_finance____string">Cari judul To Do atau Finance...</string>
    <string name="kegiatan_senin_ek1_string">Kegiatan Senin</string>
    <string name="total_kegiatan___5_ek3_string">Total Kegiatan : 5</string>
    <string name="belanja_bulanan_string">Belanja Bulanan</string>
    <string name="beli_makanan_kucing_string">Beli Makanan Kucing</string>
    <string name="beli_minum_string">Beli Minum</string>
    <string name="detail_ek4_string">Detail</string>
    <string name="kegiatan_selasa_ek1_string">Kegiatan Selasa</string>
    <string name="total_kegiatan___5_ek4_string">Total Kegiatan : 5</string>
    <string name="belanja_bulanan_ek1_string">Belanja Bulanan</string>
    <string name="beli_makanan_kucing_ek1_string">Beli Makanan Kucing</string>
    <string name="detail_ek5_string">Detail</string>
    <string name="beli_minum_ek1_string">Beli Minum</string>
    <string name="kegiatan_selasa_ek2_string">Kegiatan Selasa</string>
    <string name="total_kegiatan___5_ek5_string">Total Kegiatan : 5</string>
    <string name="belanja_bulanan_ek2_string">Belanja Bulanan</string>
    <string name="beli_makanan_kucing_ek2_string">Beli Makanan Kucing</string>
    <string name="detail_ek6_string">Detail</string>
    <string name="beli_minum_ek2_string">Beli Minum</string>
    <string name="home_ek6_string">Home</string>
    <string name="to_do_ek6_string">To Do</string>
    <string name="finance_ek4_string">Finance</string>
    <string name="profile_ek3_string">Profile</string>
    <string name="semua_string">Semua</string>
    <string name="cari_judul_to_do_atau_finance____ek1_string">Cari judul To Do atau Finance...</string>
    <string name="semua_ek2_string">Semua</string>
    <string name="bulan_ini_ek1_string">Bulan ini</string>
    <string name="hari_ini_ek1_string">Hari ini</string>
    <string name="bulan_lalu_ek1_string">Bulan lalu</string>
    <string name="home_ek8_string">Home</string>
    <string name="to_do_ek8_string">To Do</string>
    <string name="finance_ek9_string">Finance</string>
    <string name="profile_ek5_string">Profile</string>
    <string name="transaksi_string">Transaksi</string>
    <string name="set_limit_string">Set Limit</string>
    <string name="analysis_string">Analysis</string>
    <string name="saldo_string">Saldo</string>
    <string name="rp_1_000_000_string">Rp 1.000.000</string>
    <string name="pemasukkan_string">Pemasukkan</string>
    <string name="rp_1_500_000_string">Rp 1.500.000</string>
    <string name="pengeluaran_string">Pengeluaran</string>
    <string name="rp_800_000_string">Rp 800.000</string>
    <string name="_13__april_2022_string">13, April 2022</string>
    <string name="_14__april_2022_string">14, April 2022</string>
    <string name="beli_makan_ayam_string">Beli Makan Ayam</string>
    <string name="rp_12_000_string">Rp 12.000</string>
    <string name="dapet_uang_jajan_string">Dapet Uang Jajan</string>
    <string name="rp_34_000_string">Rp 34.000</string>
    <string name="_13__april_2022_ek1_string">13, April 2022</string>
    <string name="beli_makan_ayam_ek1_string">Beli Makan Ayam</string>
    <string name="rp_12_000_ek1_string">Rp 12.000</string>
    <string name="_12__april_2022_string">12, April 2022</string>
    <string name="beli_makan_ayam_ek2_string">Beli Makan Ayam</string>
    <string name="beli_makan_semut_string">Beli Makan Semut</string>
    <string name="beli_makan_kucing_string">Beli Makan Kucing</string>
    <string name="dapet_uang_jajan_ek1_string">Dapet Uang Jajan</string>
    <string name="rp">Rp </string>
    <string name="rp_12_000_ek2_string">12.000</string>
    <string name="rp_22_000_string">Rp 22.000</string>
    <string name="rp_22_000_ek1_string">Rp 22.000</string>
    <string name="rp_34_000_ek1_string">34.000</string>
    <string name="cari_judul_to_do_atau_finance____ek2_string">Cari judul To Do atau Finance...</string>
    <string name="my_finance_string">My Finance</string>
    <string name="transaction_history_ek1_string">Transaction History</string>
    <string name="home_ek10_string">Home</string>
    <string name="to_do_ek10_string">To Do</string>
    <string name="finance_ek11_string">Finance</string>
    <string name="profile_ek10_string">Profile</string>
    <string name="hello_text_string">Nice to meet you, Admin</string>
    <string name="username_string">Admin Bin Fahreza</string>
    <string name="setting_string">Setting</string>
    <string name="about_app_string">About Application</string>
    <string name="about_us_string">About Us</string>
    <string name="about_app_inside_string">MoMent adalah aplikasi yang dikembangkan oleh ControlVDev. MoMent merupakan aplikasi pengelolaan keuangan dan juga pengelola kegiatan sehari-hari.</string>
    <string name="daffa">Muhammad Daffa Al Fahreza</string>
    <string name="dicky">Dicky Setiawan</string>
    <string name="salim">Salim bin Sulaiman Bahres</string>
    <string name="yudha">Sahrul Yudha Fahrezi</string>
    <string name="notification_ek1_string">Notification</string>
    <string name="sounds_ek1_string">Sounds</string>
    <string name="help_ek1_string">Help</string>
    <string name="change_password_ek1_string">Change Password</string>
    <string name="about_application_ek1_string">About Application</string>
    <string name="log_out_ek1_string">Log Out</string>
    <string name="login_string">LOGIN</string>
    <string name="you_ve_already_sign_up_successfuly__please_check_your_email_to_get_verify_your_email__string">Youve already sign up successfuly. Please check your email to get verify your email.</string>
    <string name="already_have_an_account__string">Already have an account?</string>
    <string name="create_account_with_easy_steps_and_less_information_string">Create account with easy steps and less information</string>
    <string name="sign_up_ek3_string">SIGN UP</string>
    <string name="name_string">Name</string>
    <string name="create_account_string">Create Account</string>
    <string name="simple_money_management_and_to_do_list__string">Simple money management and to do list.</string>
    <string name="moment_ek1_string">MoMent</string>
    <string name="kegiatan_kamis_string">Kegiatan Kamis</string>
    <string name="set_task">Set Task</string>
    <string name="set_time_ek3_string">Set Time</string>
    <string name="_20___45_string">20 : 45</string>
    <string name="save_ek1_string">SAVE</string>
    <string name="repeat_string">Repeat</string>
    <string name="once_string">Once</string>
    <string name="_2x_times_string">2x Times</string>
    <string name="_5x_times_string">5x Times </string>
    <string name="_10x_times_string">10x Times</string>
    <string name="next_string">NEXT</string>
    <string name="add_title_ek3_string">Add Title</string>
    <string name="semua_ek1_string">Semua</string>
    <string name="kegiatan_kamis_ek1_string">Kegiatan Kamis</string>
    <string name="belum_ada_kegiatan_string">Belum Ada Kegiatan</string>
    <string name="kegiatan_kamis_ek2_string">To Do List</string>
    <string name="besok_string">Besok</string>
    <string name="selesai_string">Selesai</string>
    <string name="besok_ek1_string">Besok</string>
    <string name="by_priorty_string">By Priorty</string>
    <string name="selesai_hari_ini_string">Selesai Hari ini</string>
    <string name="holiday_string">Holiday</string>
    <string name="_04_12_string">04-12</string>
    <string name="meet_someone_string">Meet Someone</string>
    <string name="_04_12_ek1_string">04-12</string>
    <string name="beli_siomay_string">Beli Siomay</string>
    <string name="_04_13_string">04-13</string>
    <string name="bersihin_gedung_dpr_string">Bersihin Gedung DPR</string>
    <string name="_04_15_string">04-15</string>
    <string name="set_priority_string">Set priority</string>
    <string name="edit_string">Edit</string>
    <string name="delete_string">Delete</string>
    <string name="set_priority_ek1_string">Set Priority</string>
    <string name="high_string">High</string>
    <string name="medium_string">Medium</string>
    <string name="low_string">Low</string>
</resources>