<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/transaction_history"
    android:layout_marginTop="0dp"
    android:layout_marginStart="0dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout
        android:id="@+id/transaction_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="18dp">

        <ImageView
            android:id="@+id/rectangle_2_ek3"
            android:layout_width="327dp"
            android:layout_height="111dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="19dp"
            android:contentDescription="rectangle_2_ek3"
            android:src="@drawable/rectangle_2_ek3" />

        <TextView
            android:id="@+id/txtTanggal"
            android:layout_width="98dp"
            android:layout_height="23dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/_12__april_2022_string"
            android:textColor="@color/password_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPengeluaranFinance"
            android:layout_width="200dp"
            android:layout_height="23dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/beli_makan_ayam_ek2_string"
            android:textColor="@color/beli_makan_ayam_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPemasukkanTitle"
            android:layout_width="128dp"
            android:layout_height="23dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/dapet_uang_jajan_ek1_string"
            android:textColor="@color/beli_makan_ayam_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPengluaranUang"
            android:layout_width="70dp"
            android:layout_height="23dp"
            android:layout_marginLeft="275dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/rp_12_000_ek2_string"
            android:textColor="@color/rp_12_000_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRp"
            android:layout_width="77dp"
            android:layout_height="23dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/rp"
            android:textColor="@color/rp_12_000_color"
            android:textSize="12sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtPemasukkan"
            android:layout_width="80dp"
            android:layout_height="23dp"
            android:layout_marginLeft="275dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/rp_34_000_ek1_string"
            android:textColor="@color/rp_34_000_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rpPemasukkan"
            android:layout_width="80dp"
            android:layout_height="23dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/rp"
            android:textColor="@color/rp_34_000_color"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
